# OpenGLBreakout

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  imgui.ini
dependencies/glad/include/glad/: gl.h
dependencies/glad/src/: gl.c
resources/shaders/: basic.frag  basic.vert  particles.frag  particles.vert  postProcessing.frag  postProcessing.vert
src/: Game.cpp  Game.hpp  main.cpp
src/gameUtil/: BallObject.cpp  BallObject.hpp  GameLevel.cpp  GameLevel.hpp  GameObject.cpp  GameObject.hpp  ParticleGenerator.cpp  ParticleGenerator.hpp  PostProcessor.cpp  PostProcessor.hpp  TextRenderer.hpp
src/utility/: ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp
